# study-otus

./: .gitignore  README.md  requirements-dev.txt  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: .dockerignore  Dockerfile  app.py  main.py  pyproject.toml
homework_04/: README.md  __init__.py  config.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py  requirements.txt
homework_04/list_of_models/: post.py
homework_04/models/: __init__.py  base.py  mixins.py  user.py
homework_05/: app.py
homework_05/static/: index.css
homework_05/templates/: about.html  base.html
homework_05/templates/other/: about.html  home.html
homework_06/: app.py  config.py  docker-compose.yml  main.py  prestart.sh
homework_06/migrations/versions/: 0f6358009d0c_add_field_body_to_card_table.py  8a68587397be_create_cards_table.py  a7738195f049_add_column_created_at_to_cards_table.py  e1f1ae928343_add_flag_unique_to_card_name.py
homework_06/models/: __init__.py  card.py  database.py
homework_06/templates/: base.html
homework_06/templates/cards/: add.html  details.html  list.html
homework_06/views/: cards.py
homework_07/online_store/: models.py  views.py
homework_07/online_store/templates/online_store/: about.html
homework_08/online_store/templates/online_store/: about.html
homework_10/.github/workflows/: python-tests.yml
homework_11/: .gitignore  .gitlab-ci.yml  requirements.txt
homework_11/online_store/tests/: test_models.py  test_views.py
testing/test_homework_05/: test_app.py
(+4 files in other folders)
