[tool.poetry]
name = "fast-api-users-app"
version = "0.1.0"
description = ""
authors = ["Georgii <georgy.plyuschev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.85.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
